internal/kgateway/setup/testdata/serviceentry/we/se-we-no-addr-out.yaml
clusters:
- connectTimeout: 5s
  edsClusterConfig:
    edsConfig:
      ads: {}
      resourceApiVersion: V3
  metadata: {}
  name: istio-se_gwtest_se-b_se-b.serviceentry.com_8080
  type: EDS
- connectTimeout: 5s
  edsClusterConfig:
    edsConfig:
      ads: {}
      resourceApiVersion: V3
  metadata: {}
  name: kube_default_kubernetes_443
  type: EDS
endpoints:
- clusterName: istio-se_gwtest_se-b_se-b.serviceentry.com_8080
  endpoints:
  - {}
listeners:
- address:
    socketAddress:
      address: '::'
      ipv4Compat: true
      portValue: 8080
  filterChains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        httpFilters:
        - name: envoy.filters.http.router
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        mergeSlashes: true
        normalizePath: true
        rds:
          configSource:
            ads: {}
            resourceApiVersion: V3
          routeConfigName: listener~8080
        statPrefix: http
        useRemoteAddress: true
    name: listener~8080
  name: listener~8080
routes:
- ignorePortInHostMatching: true
  name: listener~8080
  virtualHosts:
  - domains:
    - se-b.serviceentry.com
    name: listener~8080~se-b_serviceentry_com
    routes:
    - match:
        prefix: /
      name: listener~8080~se-b_serviceentry_com-route-0-httproute-route-to-hostname-gwtest-0-0-matcher-0
      route:
        cluster: istio-se_gwtest_se-b_se-b.serviceentry.com_8080
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
