internal/kgateway/setup/testdata/serviceentry/we/se-we-no-addr.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: http-gw-for-test
  namespace: gwtest
spec:
  gatewayClassName: kgateway
  listeners:
  - protocol: HTTP
    port: 8080
    name: http
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-to-hostname
  namespace: gwtest
spec:
  parentRefs:
  - name: http-gw-for-test
  hostnames:
  - "se-b.serviceentry.com"
  rules:
  - backendRefs:
    - name: se-b.serviceentry.com
      port: 8080
      kind: Hostname
      group: networking.istio.io
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: se-b
  namespace: gwtest
spec:
  addresses:
  - 244.244.0.2
  hosts:
  - se-b.serviceentry.com
  location: MESH_INTERNAL
  ports:
  - number: 8080
    name: http
    protocol: HTTP
    targetPort: 5678
  resolution: STATIC
  workloadSelector:
    labels:
      app: svc-b
---
apiVersion: networking.istio.io/v1
kind: WorkloadEntry
metadata:
  name: empty-addr-workloadentry
  namespace: gwtest
  labels:
    app: svc-b
spec:
  network: some-external-network
